fixed menu on mobile

--- a/assets/css/qweb.css
+++ b/assets/css/qweb.css
@@ -439,7 +439,7 @@ header
   cursor: pointer;
   display: block;
   position: absolute;
-  top: 23px;
+  top: 15px;
   width: 32px;
   height: 40px;
   text-indent: -9999em;
@@ -568,7 +568,7 @@ header
     padding: 0px;
   }
   .header-area .logo {
-    margin-top: 27px !important;
+    margin-top: 15px !important;
     margin-left: 30px;
   }
   .header-area .menu-trigger {
